# user_auth

./: .env  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
doc/: access_control.md  api.md
migrations/2025-05-27-050059_create_role/: down.sql  up.sql
migrations/2025-05-27-060124_create_user/: up.sql
migrations/2025-05-27-080149_create_permission/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/handlers/: auth.rs  mod.rs  permissions.rs  roles.rs  users.rs
src/services/: jwt.rs  mod.rs  permissions.rs
src/utils/: error.rs  hash.rs  mod.rs
