[package]
name = "user_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json", "macros", "tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid"] }
dotenvy = "0.15"
tracing-subscriber = "0.3.19"
chrono = { version = "0.4.41", features = ["serde"] }
argon2 = "0.5.3"
rand = "0.9.1"
jsonwebtoken = "9.3.1"
uuid = { version = "1.17.0", features = ["v4", "serde"]  }